--- a/DOM_color_tweaker.html
+++ b/DOM_color_tweaker.html
@@ -31,7 +31,7 @@
 	<button id="btn">Click me!</button>
 	<input type= "text" id="box">
 
-	This is Steph's work. 
+	This is Stephanie Murray's work. 
 	
 	<script>
 		
